@@ -39,17 +39,6 @@ Java version: 17.0.4.1, vendor: BellSoft
 
 Maven 3.6.3 或更高版本能够完全支持 Spring Boot 3.x 系列的构建需求。建议使用最新的稳定版本以获得最佳的构建性能和功能支持。
 
-### 项目目录结构创建
-
-创建独立的项目目录是良好开发实践的重要组成部分。建立清晰的项目目录结构有助于代码组织和团队协作：
-
-```bash
-mkdir spring-boot-hello-world
-cd spring-boot-hello-world
-```
-
-这个目录将作为整个 Spring Boot 应用的根目录，包含所有源代码、配置文件和构建脚本。
-
 ## Maven 项目配置与依赖管理
 
 ### 核心 POM 配置
@@ -80,9 +69,9 @@ Maven 项目的核心配置文件是 `pom.xml`，它定义了项目的基本信�
     </parent>
 
     <properties>
-        <java.version>17</java.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -126,35 +115,53 @@ $ mvn dependency:tree
 
 这个命令会显示完整的依赖关系树，包括 Spring MVC、嵌入式 Tomcat 服务器、Jackson JSON 处理库等关键组件。起步依赖的设计理念是按功能领域组织依赖，简化了开发者的选择过程。
 
+当然，你也可以直接使用 IDEA 快速查看：
+
+![image-20250608191950331](https://bxsb-dev.oss-cn-shanghai.aliyuncs.com/image-20250608191950331.png)
+
 ## 应用代码实现
 
 ### 源代码目录结构
 
-按照 Maven 标准约定，Java 源代码应放置在 `src/main/java` 目录下。创建完整的目录结构：
+按照 Maven 标准约定，Java 源代码应放置在 `src/main/java` 目录下。完整的目录结构：
 
 ```bash
-mkdir -p src/main/java/com/example
+mkdir -p src/main/java/club/slavopolis
 mkdir -p src/main/resources
-mkdir -p src/test/java/com/example
+mkdir -p src/test/java/club/slavopolis
 ```
 
 这种标准化的目录结构不仅符合 Maven 约定，也便于团队协作和项目维护。
 
+![image-20250608192225353](https://bxsb-dev.oss-cn-shanghai.aliyuncs.com/image-20250608192225353.png)
+
 ### 主应用类实现
 
-在 `src/main/java/com/example/HelloWorldApplication.java` 文件中创建应用主类：
+在 `club.slavopolis.hello.HelloWorldApplication.java` 文件中创建应用主类：
 
 ```java
-package com.example;
+package club.slavopolis.hello;
 
+import club.slavopolis.hello.model.ApplicationInfo;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-@SpringBootApplication
+/**
+ * slavopolis-springboot
+ *
+ * @author: slavopolis
+ * @date: 2025/6/8
+ * @description: 应用启动类
+ */
 @RestController
+@SpringBootApplication
 public class HelloWorldApplication {
+
+    public static void main(String[] args) {
+        SpringApplication.run(HelloWorldApplication.class, args);
+    }
 
     @GetMapping("/")
     public String home() {
@@ -163,44 +170,94 @@ public class HelloWorldApplication {
 
     @GetMapping("/info")
     public ApplicationInfo getInfo() {
-        return new ApplicationInfo("Spring Boot Hello World", "1.0.0", 
-                                 "基于 Spring Boot 3.5.0 的快速启动示例");
-    }
-
-    public static void main(String[] args) {
-        SpringApplication.run(HelloWorldApplication.class, args);
+        return new ApplicationInfo(
+                "Spring Boot Hello World",
+                "1.0.0",
+                "基于 Spring Boot 3.5.0 的快速启动示例"
+        );
     }
 }
+```
 
-class ApplicationInfo {
+```java
+package club.slavopolis.hello.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+
+/**
+ * slavopolis-springboot
+ *
+ * @author: slavopolis
+ * @date: 2025/6/8
+ * @description: 应用信息
+ */
+@Data
+@AllArgsConstructor
+public class ApplicationInfo {
+
     private String name;
     private String version;
     private String description;
-
-    public ApplicationInfo(String name, String version, String description) {
-        this.name = name;
-        this.version = version;
-        this.description = description;
-    }
-
-    // Getters
-    public String getName() { return name; }
-    public String getVersion() { return version; }
-    public String getDescription() { return description; }
 }
 ```
 
 ### 注解功能解析
 
-* `@SpringBootApplication` 是一个组合注解，它包含了三个重要的功能注解：`@SpringBootConfiguration` 标识这是一个配置类，`@EnableAutoConfiguration` 启用自动配置机制，`@ComponentScan` 启用组件扫描。
-* `@RestController` 注解表明这个类是一个 REST 控制器，Spring 会将方法的返回值直接序列化为 HTTP 响应体。这种设计简化了 RESTful API 的开发过程。
-* `@GetMapping` 注解用于映射 HTTP GET 请求到特定的处理方法。路径参数定义了请求的 URL 模式，Spring MVC 会自动处理请求路由和参数绑定。
+`@SpringBootApplication` 是一个组合注解，它包含了三个重要的功能注解：`@SpringBootConfiguration` 标识这是一个配置类，`@EnableAutoConfiguration` 启用自动配置机制，`@ComponentScan` 启用组件扫描。
+
+```java
+@Target({ElementType.TYPE})
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+@Inherited
+@SpringBootConfiguration // 标识这是一个配置类
+@EnableAutoConfiguration // 启用自动配置机制
+@ComponentScan( // 启用组件扫描
+    excludeFilters = {@Filter(
+    type = FilterType.CUSTOM,
+    classes = {TypeExcludeFilter.class}
+), @Filter(
+    type = FilterType.CUSTOM,
+    classes = {AutoConfigurationExcludeFilter.class}
+)}
+)
+public @interface SpringBootApplication {...}
+```
+
+`@RestController` 注解表明这个类是一个 REST 控制器，Spring 会将方法的返回值直接序列化为 HTTP 响应体。这种设计简化了 RESTful API 的开发过程。
+
+```java
+@Target({ElementType.TYPE})
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+@Controller
+@ResponseBody // HTTP 响应体
+public @interface RestController {
+    @AliasFor(
+        annotation = Controller.class
+    )
+    String value() default "";
+}
+```
+
+`@GetMapping` 注解用于映射 HTTP GET 请求到特定的处理方法。路径参数定义了请求的 URL 模式，Spring MVC 会自动处理请求路由和参数绑定。
+
+```java
+@Target({ElementType.METHOD})
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+@RequestMapping(
+    method = {RequestMethod.GET} // 映射 HTTP GET 请求
+)
+public @interface GetMapping {...}
+```
 
 ### 自动配置机制
 
 `@EnableAutoConfiguration` 注解触发了 Spring Boot 的核心特性——自动配置。基于类路径中的依赖，Spring Boot 会自动配置相应的功能组件。
 
-当检测到 `spring-boot-starter-web` 依赖时，自动配置会启用嵌入式 Tomcat 服务器、Spring MVC 框架和 JSON 消息转换器。这种智能配置机制大大减少了手动配置的工作量。
+例如，当检测到 `spring-boot-starter-web` 依赖时，自动配置会启用嵌入式 Tomcat 服务器、Spring MVC 框架和 JSON 消息转换器。这种智能配置机制大大减少了手动配置的工作量。
 
 ## 应用运行与测试
 
@@ -213,6 +270,8 @@ $ mvn spring-boot:run
 ```
 
 启动过程中会显示 Spring Boot 的标志性启动日志，包括框架版本信息、自动配置报告和服务器启动信息。成功启动后，应用会监听默认的 8080 端口。
+
+![image-20250608193329353](https://bxsb-dev.oss-cn-shanghai.aliyuncs.com/image-20250608193329353.png)
 
 ### 功能验证测试
 
@@ -238,122 +297,15 @@ $ curl http://localhost:8080/info
 
 在开发模式下，可以通过 `Ctrl+C` 组合键优雅地停止应用。Spring Boot 会执行必要的清理操作，确保资源的正确释放。
 
-## 可执行 JAR 构建与部署
-
-### 构建命令执行
-
-Spring Boot 应用可以打包为完全自包含的可执行 JAR 文件，这种部署方式极大地简化了生产环境的部署过程：
-
-```bash
-$ mvn clean package
-```
-
-构建过程包括编译、测试、打包等步骤。Spring Boot Maven 插件会创建一个包含所有依赖的"fat JAR"文件。
-
-### 构建产物分析
-
-构建完成后，在 `target` 目录下会生成两个 JAR 文件：
-
-* 原始 JAR 文件（约几KB）：包含项目编译后的类文件，文件名为 `spring-boot-hello-world-1.0.0-SNAPSHOT.jar.original`。
-* 可执行 JAR 文件（约20MB）：包含项目类文件和所有依赖库，文件名为 `spring-boot-hello-world-1.0.0-SNAPSHOT.jar`。
-
-可执行 JAR 的大小反映了现代 Java 应用的特点，即包含完整的运行时环境以确保部署的一致性。
-
-### 生产环境运行
-
-可执行 JAR 文件可以在任何安装了 Java 17 或更高版本的环境中直接运行：
-
-```bash
-$ java -jar target/spring-boot-hello-world-1.0.0-SNAPSHOT.jar
-```
-
-这种部署方式的优势在于其简单性和一致性。无需外部应用服务器，也无需复杂的环境配置，大大降低了部署和运维的复杂性。
-
-## 扩展配置与优化
-
-### 应用配置文件
-
-在 `src/main/resources` 目录下创建 `application.yml` 配置文件：
-
-```yaml
-server:
-  port: 8080
-  servlet:
-    context-path: /api
-
-spring:
-  application:
-    name: hello-world-app
-  output:
-    ansi:
-      enabled: always
-
-logging:
-  level:
-    com.example: INFO
-    org.springframework.web: DEBUG
-  pattern:
-    console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info
-  endpoint:
-    health:
-      show-details: when-authorized
-```
-
-### 多环境配置支持
-
-Spring Boot 支持多环境配置管理，可以为不同的部署环境创建特定的配置文件：
-
-创建 `application-dev.yml` 用于开发环境：
-
-```yaml
-server:
-  port: 8080
-
-logging:
-  level:
-    root: DEBUG
-```
-
-创建 `application-prod.yml` 用于生产环境：
-
-```yaml
-server:
-  port: 80
-
-logging:
-  level:
-    root: WARN
-  file:
-    name: /var/log/hello-world-app.log
-```
-
-通过 `--spring.profiles.active=prod` 参数可以激活特定环境的配置。
-
-### 性能优化建议
-
-对于生产环境部署，建议添加 JVM 优化参数：
-
-```bash
-java -Xmx512m -Xms256m -XX:+UseZGC \
-     -Dspring.profiles.active=prod \
-     -jar target/spring-boot-hello-world-1.0.0-SNAPSHOT.jar
-```
-
-这些参数能够改善应用的启动时间和运行时性能，特别是在容器化环境中效果更为明显。
-
 ## 开发工具集成
 
 ### IDE 支持配置
 
-现代化的集成开发环境对 Spring Boot 提供了全面的支持。IntelliJ IDEA 和 Eclipse 都能识别 Spring Boot 项目结构，提供智能代码提示、自动配置分析和运行时调试功能。
+现代化的集成开发环境对 Spring Boot 提供了全面的支持。IntelliJ IDEA 和 Eclipse 都能识别 Spring Boot 项目结构，提供智能代码提示、自动配置分析和运行时调试功能。建议在 IDE 中安装 Spring Boot 相关插件，这些插件能够提供配置文件的智能提示、应用健康状态监控和热重载支持等高级功能。
 
-建议在 IDE 中安装 Spring Boot 相关插件，这些插件能够提供配置文件的智能提示、应用健康状态监控和热重载支持等高级功能。
+默认情况下 IDEA 已经捆绑了相关插件，无需特意安装：
+
+![image-20250608193804077](https://bxsb-dev.oss-cn-shanghai.aliyuncs.com/image-20250608193804077.png)
 
 ### 开发工具增强
 
@@ -369,36 +321,3 @@ java -Xmx512m -Xms256m -XX:+UseZGC \
 ```
 
 DevTools 提供了自动重启、实时重载和远程调试等功能，能够显著提升开发效率。
-
-## 常见问题解决
-
-### 端口冲突处理
-
-如果默认的 8080 端口被占用，可以通过配置文件或命令行参数修改端口：
-
-```bash
-java -jar target/spring-boot-hello-world-1.0.0-SNAPSHOT.jar --server.port=8081
-```
-
-### 依赖冲突解决
-
-当遇到依赖版本冲突时，可以使用 Maven 的依赖分析工具进行诊断：
-
-```bash
-mvn dependency:analyze
-mvn dependency:tree -Dverbose
-```
-
-通过排除依赖或显式版本声明可以解决大多数冲突问题。
-
-### 启动时间优化
-
-对于对启动时间敏感的应用，可以通过延迟初始化和类路径优化来改善性能：
-
-```yaml
-spring:
-  main:
-    lazy-initialization: true
-  jpa:
-    defer-datasource-initialization: true
-```
